ready for push4

--- a/browse_events.html
+++ b/browse_events.html
@@ -47,18 +47,28 @@
   	<div class="container">
   		<div class="col-md-12" style="text-align: center;font-size: 3em">
   			Upcoming Events
-  		</div>
   		<br>
-  		<div class="row">
-  			<div class="col-md-10 col-sm-9 col-">
-  				<input type="text" class="form-control" placeholder="Search here" required>
-  			</div>
-  			<div class="col-md-1 col-sm-3">
-  				<button style="margin-left:0px;" type="button" class="btn btn-primary">Search</button>
+  			<div class="dropdown">
+  				<button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+  					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Search By Category&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  				</button>
+  				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+  					<a class="dropdown-item" href="#">Action</a>
+  					<a class="dropdown-item" href="#">Another action</a>
+  					<a class="dropdown-item" href="#">Something else here</a>
+  				</div>
+  				<button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+  					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Search By Date&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  				</button>
+  				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+  					<a class="dropdown-item" href="#">Action</a>
+  					<a class="dropdown-item" href="#">Another action</a>
+  					<a class="dropdown-item" href="#">Something else here</a>
+  				</div>
   			</div>
   		</div>
   		<br><br>
-  			<div class="row">
+  		<div class="row">
   			<div class="card col-md-4">
   				<img class="card-img-top" src="images/event1.jpg" alt="Card image cap">
   				<div class="card-body">
@@ -107,16 +117,16 @@
   				</div>
   			</div>
   			<br>
-  		<br><br>
+  			<br><br>
+  		</div>
   	</div>
-  </div>
 
-  <br><br><br><br><br>
-  <footer class="footer fixed-bottom">
-  	<div style="text-align: center; padding: 10px; color: white;" class="bg-dark">
-  		EMS 2017
-  	</div>
-  </footer>
+  	<br><br><br><br><br>
+  	<footer class="footer">
+  		<div style="text-align: center; padding: 10px; color: white;" class="bg-dark">
+  			EMS 2017
+  		</div>
+  	</footer>
 
 
 	<!--<h1 style="color:white; background-color:rgba(4.683962264150937%,66.42415702982352%,100%,0.9)">PARAM MITTAL</h1>
