--- a/browse_events2.html
+++ b/browse_events2.html
@@ -11,7 +11,7 @@
   	<title>EMS-AKGEC</title>
   </head>
   <body>
-    <button onclick="topFunction()" id="myBtn" title="Go to top"><b>^</b></button>
+  	<button onclick="topFunction()" id="myBtn" title="Go to top"><b>^</b></button>
   	<nav id="navbaar" class="navbar navbar-expand-lg navbar-dark sticky-top">
   		<a class="navbar-brand" href="index.html">
   			<img src="images/headerlogo.png" height="45px" class="d-inline-block align-top" alt="">
@@ -44,49 +44,75 @@
   	</nav>
   	<img class="fixed-top" style="margin-top: 71px; vertical-align:top; " src="images/shadow.png" width="100%">
   	<br><br>
-    <div class="container">
+  	<div class="container">
+  		<div class="col-md-12" style="text-align: center;font-size: 3em">
+  			Upcoming Events
+      </div>
+      <br><br>
       <div class="row">
-        <div class="col-md-8">
-          <img style="width: 100%" src="images/event1.jpg">
+        <div class="col-12 col-md-6">
+          <select class="form-control">
+            <option>Event By Category</option>
+            <option>c1</option>
+            <option>c2</option>
+            <option>c3</option>
+            <option>c4</option>
+          </select>
         </div>
-        <div style="background-color: white; color: #666a73; opacity: 0.8" class="col-md-4">
-          <h1 style="color: black;">Event Name</h1>
-          <br>
-          <h4>Event date time</h4>
-          <br>
-          <h5>Event category</h5>
-          <br><br><br><br>
-          <button style="width:100%" class="btn btn-primary">Register</button>
+        <br><br>
+        <div class="col-12 col-md-6">
+          <select class="form-control">
+            <option>Event By Date</option>
+            <option>d1</option>
+            <option>d2</option>
+            <option>d3</option>
+            <option>d4</option>
+          </select>
         </div>
       </div>
       <br><br>
-      <div style=" padding:10px; color: #666a73;" class="col-md-12">
-        <h1 style="color: black;">Description</h1>
-        <br>
-        <br>
-        <h4>bla bla bla....</h4>
-        <br><br>
+      <div class="row">
+       <div class="col-12 col-md-6">
+        <img src="images/event1.jpg" class="w-100 card-img" alt="image cap">
       </div>
-      <br><br><br>
-      <div style=" padding:10px; color: #666a73;" class="col-md-12">
-        <h1 style="color: black;">Feedback</h1>
-        <br>
-        <textarea style="width: 100%; opacity: 0.8;">Give feedback Here ...</textarea>
-        <br><br>
-      </div>
-    </div>
-    <footer class="footer">
-      <div style="text-align: center; padding: 10px; color: white;" class="bg-dark">
-       EMS 2017
+      <div class="col-12 col-md-6">        
+       <h4>Event Name 1</h4>
+       <p>Event Date Event Time</p>
+       <p><b>Event Category</b></p>
+       <br>
+       <div style="text-align:center;">
+         <button style="width: 80%;" type="button" class="btn btn-primary">View</button>
+       </div>
      </div>
-   </footer>
+     <br>
+     <div class="col-12 col-md-6">
+        <img src="images/event2.jpg" class="w-100 card-img" alt="image cap">
+      </div>
+      <div class="col-12 col-md-6">        
+       <h4>Event Name 2</h4>
+       <p>Event Date Event Time</p>
+       <p><b>Event Category</b></p>
+       <br>
+       <div style="text-align:center;">
+         <button style="width: 80%;" type="button" class="btn btn-primary">View</button>
+       </div>
+     </div>
+   </div>
+ </div>
 
-<br><br><br><br>
+ <br><br><br><br><br>
+ <footer class="footer fixed-bottom">
+  <div style="text-align: center; padding: 10px; color: white;" class="bg-dark">
+   EMS 2017
+ </div>
+</footer>
+
+
 	<!--<h1 style="color:white; background-color:rgba(4.683962264150937%,66.42415702982352%,100%,0.9)">PARAM MITTAL</h1>
 	-->
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="js/script.js"></script>
+	<script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
