--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>EMS-SI</title>
+	<style>
+		body
+{
+    background: url("images/gears3.svg") no-repeat center fixed; 
+    background-size: cover;
+}
+	</style>
 </head>
 <body>
 
@@ -59,9 +66,11 @@
 				<div class="carousel-item">
 					<img class="d-block w-100" src="images/slide03.jpg" alt="Third slide">
 				</div>
-
 				<div class="carousel-item">
 					<img class="d-block w-100" src="images/slide04.jpg" alt="Third slide">
+				</div>
+				<div class="carousel-item">
+					<img class="d-block w-100" src="images/slide05.jpg" alt="Third slide">
 				</div>
 
 			</div>
@@ -297,7 +306,7 @@
 	<button class="btn btn-danger" onclick='swal("Failed!", "Please Register again!", "error");'>danger</button>
 
 	<br>
-	<br><br><br><br><br><br>
+	<br><br><br><br><br><br><br><br>
 	<div class="container">
 		<div class="row justify-content-between">
 			<div style="text-align: center;" class="col-md-5">
@@ -315,12 +324,11 @@
 		</div>
 	</div>
 	<br><br><br><br><br><br>
-	<footer class="footer fixed-bottom">
+	<footer class="footer">
 		<div style="text-align: center; padding: 10px; color: white;" class="bg-dark">
 			EMS 2017
 		</div>
 	</footer>
-
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
