--- a/link_expire.html
+++ b/link_expire.html
@@ -9,9 +9,21 @@
   	<link rel="stylesheet" type="text/css" href="css/style.css">
   	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   	<title>EMS-AKGEC</title>
-  </head>
-  <body>
-    <button onclick="topFunction()" id="myBtn" title="Go to top"><b>^</b></button>
+     <link href="css/my-style.css" rel="stylesheet" type="text/css" />
+ 
+<!-- custom css -->
+<link href="css/datedropper.css" rel="stylesheet" type="text/css" />
+<!-- jQuery lib -->
+<script type="text/javascript" src="js/script.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+<!-- dateDropper lib -->
+<script src="js/datedropper.js"></script>
+<script src="js/timedropper.js"></script>
+<link rel="stylesheet" type="text/css" href="css/timedropper.css">
+</head>
+<body>
+<!-- tag element -->
+      <button onclick="topFunction()" id="myBtn" title="Go to top"><b>^</b></button>
   	<nav id="navbaar" class="navbar navbar-expand-lg navbar-dark sticky-top">
   		<a class="navbar-brand" href="index.html">
   			<img src="images/headerlogo.png" height="45px" class="d-inline-block align-top" alt="">
@@ -25,68 +37,28 @@
   		<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
   			<ul style="font-size: 1.2em" class="navbar-nav">
   				<li class="nav-item">
-  					<a class="nav-link" data-toggle="modal" data-target="#OrganiserLoginModal">Create Event</a>
-  				</li>
-  				<li class="nav-item">
-  					<a class="nav-link" href="#">Browse events<span class="sr-only"></span></a>
-  				</li>
-  				<li class="nav-item">
-  					<a class="nav-link" data-toggle="modal" data-target="#LoginModal">Login</a>
-  				</li>
-  				<li class="nav-item">
-  					<a class="nav-link" data-toggle="modal" data-target="#SignupModalLong">Sign Up</a>
-  				</li>
-  				<li class="nav-item">
   					<a class="nav-link" href="#">Help</a>
   				</li>
   			</ul>
   		</div>
   	</nav>
   	<img class="fixed-top" style="margin-top: 71px; vertical-align:top; " src="images/shadow.png" width="100%">
-  	<br><br>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8">
-          <img style="width: 100%" src="images/event1.jpg">
-        </div>
-        <div style="background-color: white; color: #666a73; opacity: 0.8" class="col-md-4">
-          <h1 style="color: black;">Event Name</h1>
-          <br>
-          <h4>Event date time</h4>
-          <br>
-          <h5>Event category</h5>
-          <br><br><br><br>
-          <button style="width:100%" class="btn btn-primary">Register</button>
-        </div>
-      </div>
-      <br><br>
-      <div style=" padding:10px; color: #666a73;" class="col-md-12">
-        <h1 style="color: black;">Description</h1>
-        <br>
-        <br>
-        <h4>bla bla bla....</h4>
-        <br><br>
-      </div>
-      <br><br><br>
-      <div style=" padding:10px; color: #666a73;" class="col-md-12">
-        <h1 style="color: black;">Feedback</h1>
-        <br>
-        <textarea style="width: 100%; opacity: 0.8;">Give feedback Here ...</textarea>
-        <br><br>
-      </div>
+  	<br><br><br><br>
+  	<div style="text-align: center;" class="container">
+      <h4>Sorry!<br>Your link is expired.</h4><h1><b>:(</b></h1>     
     </div>
-    <footer class="footer">
-      <div style="text-align: center; padding: 10px; color: white;" class="bg-dark">
-       EMS 2017
-     </div>
-   </footer>
+  	<br><br><br><br>
+  	<footer class="footer">
+  		<div style="text-align: center; padding: 10px; color: white;z-index:1000000000000" class="bg-dark">
+  			EMS 2017
+  		</div>
+  	</footer>
 
-<br><br><br><br>
+
 	<!--<h1 style="color:white; background-color:rgba(4.683962264150937%,66.42415702982352%,100%,0.9)">PARAM MITTAL</h1>
 	-->
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
