--- a/new_pass.html
+++ b/new_pass.html
@@ -54,7 +54,7 @@
 			</div>
 		</div>
 		<br><br><br>
-	<footer class="footer fixed-bottom">
+	<footer class="footer">
 		<div style="text-align: center; padding: 10px; color: white;" class="bg-dark">
 			EMS 2017
 		</div>
@@ -67,21 +67,6 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 	
-	
-	<script>(function() {
-  'use strict';
-  window.addEventListener('load', function() {
-    var form = document.getElementById('needs-validation');
-    form.addEventListener('submit', function(event) {
-      if (form.checkValidity() === false) {
-        event.preventDefault();
-        event.stopPropagation();
-      }
-      form.classList.add('was-validated');
-    }, false);
-  }, false);
-})();
-</script>
 <script src="js/bootstrap-password-toggler.min.js" type="text/javascript"></script>
     <script type="text/javascript">
   var _gaq = _gaq || [];
