--- a/organiser_dashboard.html
+++ b/organiser_dashboard.html
@@ -47,23 +47,21 @@
 
 <div class="container">
 	<div class="row " style="text-align: center;">
-		<div class="col-md-6 ">
+		<div class="col-md-4">
 			<button style="width: 85%; height: 150px; margin-top: 20px;" type="button" class="btn btstyle" onClick="location.href='create_event.html'">Create Event
 			</button>
-			<br><br>
-			<button onClick="location.href='delete_organiser.html'" style="width: 85%; height: 150px" type="button" class="btn btstyle">Delete Event </button>
 		</div>
-
-		<div class="col-md-6">
-			<button onClick="location.href='view_registration.html'" style="width: 85%; height: 150px; margin-top: 20px;" type="button" class="btn btstyle">View registrations</button>
-			<br><br>
-			<button onClick="location.href='delete_ongoing_event.html'" style="width: 85%; height: 150px" type="button" class="btn btstyle">Delete Ongoing <br>event</button>
+		<div class="col-md-4">
+			<button onClick="location.href='view_registration_organiser.html'" style="width: 85%; height: 150px;margin-top: 20px;" type="button" class="btn btstyle">View registrations</button>
+		</div>
+		<div class="col-md-4">
+			<button onClick="location.href='delete_ongoing_event_organiser.html'" style="width: 85%; height: 150px;margin-top: 20px;" type="button" class="btn btstyle">Delete event</button>
 		</div>
 	</div>
 </div>
 <br>
 <br>
-	<footer class="footer fixed-bottom">
+	<footer class="footer">
 		<div style="text-align: center; padding: 10px; color: white;" class="bg-dark">
 			EMS 2017
 		</div>
@@ -75,19 +73,5 @@
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
-	<script>(function() {
-  'use strict';
-
-  window.addEventListener('load', function() {
-    var form = document.getElementById('needs-validation');
-    form.addEventListener('submit', function(event) {
-      if (form.checkValidity() === false) {
-        event.preventDefault();
-        event.stopPropagation();
-      }
-      form.classList.add('was-validated');
-    }, false);
-  }, false);
-})();</script>
 </body>
 </html>
