--- a/view_organiser_details.html
+++ b/view_organiser_details.html
@@ -25,16 +25,10 @@
   		<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
   			<ul style="font-size: 1.2em" class="navbar-nav">
   				<li class="nav-item">
-  					<a class="nav-link" data-toggle="modal" data-target="#OrganiserLoginModal">Create Event</a>
-  				</li>
-  				<li class="nav-item">
   					<a class="nav-link" href="#">Browse events<span class="sr-only"></span></a>
   				</li>
   				<li class="nav-item">
-  					<a class="nav-link" data-toggle="modal" data-target="#LoginModal">Login</a>
-  				</li>
-  				<li class="nav-item">
-  					<a class="nav-link" data-toggle="modal" data-target="#SignupModalLong">Sign Up</a>
+  					<a class="nav-link" data-toggle="modal" data-target="#SignupModalLong">Logout</a>
   				</li>
   				<li class="nav-item">
   					<a class="nav-link" href="#">Help</a>
@@ -45,18 +39,19 @@
   	<img class="fixed-top" style="margin-top: 71px; vertical-align:top; " src="images/shadow.png" width="100%">
   	<br><br>
     <div class="container">
-      <div class="row">
-        <div class="col-md-8">
-          <img style="width: 100%" src="images/event1.jpg">
+      <div class="row justify-content-center">
+        <div class="col-md-3">
+          <img style="width: 100%" src="images/organiserpic1.png">
         </div>
         <div style="background-color: white; color: #666a73; opacity: 0.8" class="col-md-4">
-          <h1 style="color: black;">Event Name</h1>
+          <h1 style="color: black;">Organiser Name</h1>
+          <h4>Organiser id</h4>
           <br>
-          <h4>Event date time</h4>
+          <h5>Email id</h5>
           <br>
-          <h5>Event category</h5>
-          <br><br><br><br>
-          <button style="width:100%" class="btn btn-primary">Register</button>
+          <h5>Address</h5>
+          <br>
+          <h5>Mobile No.</h5>
         </div>
       </div>
       <br><br>
@@ -68,12 +63,6 @@
         <br><br>
       </div>
       <br><br><br>
-      <div style=" padding:10px; color: #666a73;" class="col-md-12">
-        <h1 style="color: black;">Feedback</h1>
-        <br>
-        <textarea style="width: 100%; opacity: 0.8;">Give feedback Here ...</textarea>
-        <br><br>
-      </div>
     </div>
     <footer class="footer">
       <div style="text-align: center; padding: 10px; color: white;" class="bg-dark">
